--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ p{
 .text-color{
     color:rgb(119, 33, 33); ;
 }
+
 /*NAVIGATION BAR*/
 
 nav{
@@ -45,14 +46,14 @@ nav{
     display: flex;
 }
 
-.nav__link--anchor{
+.nav__link--button{
     margin: 0 18px;
     text-decoration: none;
     color: rgb(107, 29, 29);
     font-weight: 700;
 }
 
-.nav__link--anchor-primary{
+.nav__link--button-style{
     background-color: navajowhite;
     padding: 6px 17px;
     border-radius: 80%;
@@ -64,3 +65,32 @@ nav{
     max-width: 40%;
     max-height: 40%;
 }
+
+/*INSTRUCTION SET*/
+
+.instruction-set{
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.instruction-set__list{
+    display: flex;
+    flex-direction: column;
+}
+
+.img-scaling{
+    padding-bottom: 25px;
+    max-width: 200px;
+}
+
+.instruction-set__list--text{
+    line-height: 1.5;
+    text-decoration: none;
+    font-size: 16px;
+    align-items: center; 
+    margin:0 auto;   
+}
+
