--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;700&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -7,28 +8,43 @@
 }
 
 h1{
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 20px;
+    margin-top: 30px;
     color:rgb(107, 29, 29);
     font-weight: 700;
-    font-size: 20px;
+    font-size: 40px;
 }
 
 p{
-    line-height: 1.5;
+    margin-left: 90px;
+    margin-right: 90px;
+    line-height: 1.8;
     font-size: 16px;
     text-align: left;
 }
 
+ol > li{
+    text-align: center;
+    list-style-position:outside;
+}
+ul > li{
+    list-style-type: none;
+}
+
+li::marker{
+    font-size: 25px;
+    font-family: 'Anton';
+}
+
 .section__coloring{
-    background-color:whitesmoke;
+    background-color:rgb(221, 217, 217);
 }
 
 .text-color{
-    color:rgb(75, 119, 33);
+    color:rgb(107, 29,29);
     font-size: 20px;
-}
-
-li{
-    list-style-type: none;
 }
 
 /*NAVIGATION BAR*/
@@ -41,11 +57,13 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: rgb(107, 29, 29);
+    border-bottom: 2px solid black;
 }
 
 .nav-bar{
     position: relative;
-    border-bottom: 2px solid black;
+    
 }
 
 .contact-info{
@@ -91,6 +109,7 @@ nav{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    max-width: 900px;
 }
 
 .img-scaling{
@@ -108,12 +127,11 @@ nav{
     text-align: left;
     display: flex;
     flex-direction: column;
-    height: 100px;
+    max-height: fit-content;
     width:100%;
     max-width: 1000px;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;  
     padding-top: 10px; 
     padding-bottom: 50px; 
 }
