--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;700&display=swap');
 *{
     padding: 0;
@@ -17,9 +16,19 @@ h1{
     font-size: 40px;
 }
 
+h2{
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 20px;
+    margin-top: 30px;
+    color:rgb(107, 29, 29);
+    font-weight: 700;
+    font-size: 20px;
+}
+
 p{
-    margin-left: 90px;
-    margin-right: 90px;
+    margin-left: 30px;
+    margin-right: 30px;
     line-height: 1.8;
     font-size: 16px;
     text-align: left;
@@ -29,9 +38,7 @@ ol > li{
     text-align: center;
     list-style-position:outside;
 }
-ul > li{
-    list-style-type: none;
-}
+
 
 li::marker{
     font-size: 25px;
@@ -136,10 +143,17 @@ nav{
     padding-bottom: 50px; 
 }
 
+.instruction-set__warnings--list{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 900px;
+}
 
 .instruction-set__warnings--warning-text{
     font-size: 18px;
     color: darkred;
 }
+
 
 
